--- a/test/slider/slider.html
+++ b/test/slider/slider.html
@@ -8,12 +8,38 @@
 
 <body>
 
+    <div class="light">
+        <input type="checkbox" name="check-1" id="check-1" class="switch" checked="checked">
+        <label for="check-1" class="switch">Lorem Ipsum dolor sit amet</label>
+    </div>
 
-    <!-- <div class="slider"> -->
-    <input type="checkbox" name="check-1" id="check-1" class="switch-btn" checked="checked">
-    <label for="check-1" class="switch-label">Lorem Ipsum dolor siam et</label>
-    <!-- </div> -->
+    <div class="dark">
+        <input type="checkbox" name="check-2" id="check-2" class="switch" checked="checked">
+        <label for="check-2" class="switch">Lorem Ipsum dolor sit amet</label>
+    </div>
 
+    <div class="contrast">
+        <input type="checkbox" name="check-3" id="check-3" class="switch" checked="checked">
+        <label for="check-3" class="switch">Lorem Ipsum dolor sit amet</label>
+    </div>
+
+    <div class="light">
+        <label for="check-4">Lorem Ipsum dolor sit amet</label>
+        <input type="checkbox" name="check-4" id="check-4" class="switch" checked="checked">
+        <label for="check-4" class="switch" />
+    </div>
+
+    <div class="dark">
+        <label for="check-5">Lorem Ipsum dolor sit amet</label>
+        <input type="checkbox" name="check-5" id="check-5" class="switch" checked="checked">
+        <label for="check-5" class="switch" />
+    </div>
+
+    <div class="contrast">
+        <label for="check-6">Lorem Ipsum dolor sit amet</label>
+        <input type="checkbox" name="check-6" id="check-6" class="switch" checked="checked">
+        <label for="check-6" class="switch" />
+    </div>
 
 </body>
 
