--- a/aplicacao/front/height.html
+++ b/aplicacao/front/height.html
@@ -135,7 +135,7 @@
                     <div class="row v-divider"></div>
                     <div class="row justify-content-between">
                         <div class="col-5 col-md-4 col-lg-3"><a href="javascript:history.back()" class="btn btn-hw-sm color-medium btn-block" role="button" aria-pressed="true">Anterior</a></div>
-                        <div class="col-5 col-md-4 col-lg-3"><a href="symptom.html" class="btn btn-hw-sm color-medium btn-block disabled" role="button" aria-pressed="true" aria-disabled="true" id="next-button"  aria-disabled>Próximo</a></div>
+                        <div class="col-5 col-md-4 col-lg-3"><a href="weight.html" class="btn btn-hw-sm color-medium btn-block disabled" role="button" aria-pressed="true" aria-disabled="true" id="next-button"  aria-disabled>Próximo</a></div>
                     </div>
                     <div class="row v-divider"></div>
                     <div class="row">
