--- a/aplicacao/front/terms.html
+++ b/aplicacao/front/terms.html
@@ -124,7 +124,7 @@
 				<div class="col-11 col-md-8">
 					<div class="containter-flex color-light" id="title">
 						<h1>
-							Termps de uso
+							Termos de uso
 						</h1>
                     </div>
                     <p>Os dados utilizados pelo sistema não ficam armazenados, …</p>
