--- a/aplicacao/front/meaning.html
+++ b/aplicacao/front/meaning.html
@@ -124,7 +124,7 @@
 				<div class="col-11 col-md-8">
 					<div class="containter-flex color-light" id="title">
 						<h1>
-							O que significam estes resiltados
+							O que significam estes resultados
 						</h1>
                     </div>
                     <p>Estes resultados são baseados em parâmetros estatísticos, …</p>
