--- a/aplicacao/front/list_disease.html
+++ b/aplicacao/front/list_disease.html
@@ -157,8 +157,10 @@
                     </div>
                     <div class="row v-divider-sm"></div>
                     <div class="row justify-content-center">
-                        <div class="col-8 col-md-6 col-lg-3">
-							<button class="btn btn-hw-sm color-medium btn-block">Doença X</button>
+						<div class="col-8 col-md-6 col-lg-3">
+							<a href="./disease_page.html" class=" nav-link btn btn-hw-sm color-medium btn-block" role="button" aria-pressed="true">
+								Doença X
+							</a>
                         </div>
                     </div>
                     <div class="row v-divider-sm"></div>
