--- a/aplicacao/front/symptom.html
+++ b/aplicacao/front/symptom.html
@@ -123,7 +123,7 @@
                     <div class="row v-divider"></div>
                     <div class="row">
                         <div class="col centering question">
-                            Vocês sintôma X?
+                            Você apresentou sintôma X?
                         </div>
                     </div>
                     <div class="row v-divider"></div>
