--- a/aplicacao/front/sex.html
+++ b/aplicacao/front/sex.html
@@ -23,7 +23,7 @@
 				<div class="row header justify-content-center">
 					<!-- navbar-expand-lg -->
 					<div class="col-2 col-md-1">
-						<button type="button" class="btn" data-toggle="collapse" data-target="#toggler" aria-controls="toggler"
+						<button type="button" class="btn" data-toggle="collapse" data-target="#toggler" aria-controls="side-bar"
 							aria-expanded="false" aria-label="Toggle navigation">
 							<svg class="bi bi-layout-sidebar-inset" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="currentColor"
 								xmlns="http://www.w3.org/2000/svg">
