aria-pressed="true" removed

--- a/aplicacao/front/index.html
+++ b/aplicacao/front/index.html
@@ -124,7 +124,7 @@
 						<div class="container text-box">
 							Antes de prosseguir é necessário concordar com os termos de uso.
 						</div>
-						<a href="./terms.html" class="nav-link color-clear btn btn-block btn-hw-sm" role="button" aria-pressed="true">
+						<a href="./terms.html" class="nav-link color-clear btn btn-block btn-hw-sm" role="button">
 							<svg class="bi bi-book" width="1.5em" height="1.5em" viewBox="0 0 16 16" fill="currentColor"
 								xmlns="http://www.w3.org/2000/svg">
 								<path fill-rule="evenodd"
@@ -136,7 +136,7 @@
 							</svg>
 							Termos de Uso
 						</a>
-						<a href="./sex.html" class="nav-link btn btn-hw-sm btn-block color-medium breath-before" role="button" aria-pressed="true">
+						<a href="./sex.html" class="nav-link btn btn-hw-sm btn-block color-medium breath-before" role="button">
 							Aceitar
 						</a>
 					</div>
