--- a/aplicacao/front/results.html
+++ b/aplicacao/front/results.html
@@ -170,7 +170,7 @@
                     <div class="row v-divider-sm"></div>
                     <div class="row justify-content-center">
                         <div class="col-8 col-md-6 col-lg-3">
-							<a href="./meaning.html" class=" nav-link btn btn-hw-sm color-heavy btn-block" role="button" aria-pressed="true">
+							<a href="./meaning.html" class=" nav-link btn btn-hw-sm color-heavy btn-block" role="button">
 								O que estes resultados significam
 							</a>
                         </div>
@@ -197,7 +197,7 @@
 							</p>
 							<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi perferendis voluptatibus dolorum ratione consequuntur excepturi, tenetur saepe minus deserunt velit!</p>
 						</div>
-						<a href="./disease_page.html" class=" nav-link btn btn-hw-sm btn-block color-medium" role="button" aria-pressed="true">
+						<a href="./disease_page.html" class=" nav-link btn btn-hw-sm btn-block color-medium" role="button">
 							Ir para página
 						</a>
 					</div>
