--- a/aplicacao/front/list_disease.html
+++ b/aplicacao/front/list_disease.html
@@ -158,7 +158,7 @@
                     <div class="row v-divider-sm"></div>
                     <div class="row justify-content-center">
 						<div class="col-8 col-md-6 col-lg-3">
-							<a href="./disease_page.html" class=" nav-link btn btn-hw-sm color-medium btn-block" role="button" aria-pressed="true">
+							<a href="./disease_page.html" class=" nav-link btn btn-hw-sm color-medium btn-block" role="button">
 								Doença X
 							</a>
                         </div>
