--- a/aplicacao/front/sex.html
+++ b/aplicacao/front/sex.html
@@ -134,8 +134,8 @@
                     </div>
                     <div class="row v-divider"></div>
                     <div class="row justify-content-between">
-                        <div class="col-5 col-md-4 col-lg-3"><a href="javascript:history.back()" class="btn btn-hw-sm color-medium btn-block" role="button" aria-pressed="true">Anterior</a></div>
-                        <div class="col-5 col-md-4 col-lg-3"><a href="age.html" class="btn btn-hw-sm color-medium btn-block disabled" role="button" aria-pressed="true" aria-disabled="true" id="next-button" aria-disabled>Próximo</a></div>
+                        <div class="col-5 col-md-4 col-lg-3"><a href="javascript:history.back()" class="btn btn-hw-sm color-medium btn-block" role="button">Anterior</a></div>
+                        <div class="col-5 col-md-4 col-lg-3"><a href="age.html" class="btn btn-hw-sm color-medium btn-block disabled" role="button" aria-disabled="true" id="next-button" aria-disabled>Próximo</a></div>
                     </div>
                     <div class="row v-divider"></div>
                     <div class="row">
