--- a/aplicacao/front/results.html
+++ b/aplicacao/front/results.html
@@ -128,7 +128,7 @@
                     <div class="row v-divider-sm"></div>
                     <div class="row justify-content-center">
                         <div class="col-8 col-md-6 col-lg-3">
-							<button class="btn btn-hw-sm color-medium btn-block"data-toggle="collapse" data-target="#collapse-box" aria-expanded="false" aria-controls="collapse-box">
+							<button class="btn btn-hw-sm color-medium btn-block" data-toggle="modal" data-target="#modalExemplo" aria-expanded="false">
 								Doença X <span class="value">90%</span>
 
 							</button>
@@ -178,29 +178,38 @@
 				</div>
 		</main>
 
-		<div class="row justify-content-center whole-screen collapse" id="collapse-box"  data-toggle="collapse" data-target="#collapse-box" aria-expanded="false" aria-controls="collapse-box">
-			<div class="col-11 col-sm-6 col-lg-3 align-self-center">
-					<div class="color-light round-border-hw">
-						<button class="btn btn-hw-sm btn-block color-medium">
+ 		<!-- Modal -->
+		<div class="modal fade" id="modalExemplo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog modal-dialog-centered" role="document">
+				<div class="modal-content color-light round-border-hw">
+					<div class="modal-header">
+						<!-- <h5 class="modal-title" id="exampleModalLabel">Espere um pouco</h5> -->
+						<span class="btn btn-hw-sm btn-block color-medium">
 							Doença X
-						</button>
-						<div class="text-box">
-							<h5>
-								Principais sintomas:
-							</51>
-							<ul>
-								<li>Primeiro sintoma</li>
-								<li>Outro sintoma</li>
-							</ul>
-							<p>
-								X é uma doença bacteriana, etc.
-							</p>
-							<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi perferendis voluptatibus dolorum ratione consequuntur excepturi, tenetur saepe minus deserunt velit!</p>
-						</div>
+							<button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+								<span aria-hidden="true">&times;</span>
+							</button>
+						</span>
+					</div>
+					<div class="modal-body text-box">
+						<h5>
+							Principais sintomas:
+						</51>
+						<ul>
+							<li>Primeiro sintoma</li>
+							<li>Outro sintoma</li>
+						</ul>
+						<p>
+							X é uma doença bacteriana, etc.
+						</p>
+						<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi perferendis voluptatibus dolorum ratione consequuntur excepturi, tenetur saepe minus deserunt velit!</p>
+					</div>
+					<div class="modal-footer">
 						<a href="./disease_page.html" class=" nav-link btn btn-hw-sm btn-block color-medium" role="button">
 							Ir para página
 						</a>
 					</div>
+				</div>
 			</div>
 		</div>
 
