modal title update

--- a/aplicacao/front/results.html
+++ b/aplicacao/front/results.html
@@ -183,15 +183,18 @@
 			<div class="modal-dialog modal-dialog-centered" role="document">
 				<div class="modal-content color-light round-border-hw">
 					<div class="modal-header">
-						<!-- <h5 class="modal-title" id="exampleModalLabel">Espere um pouco</h5> -->
-						<span class="btn btn-hw-sm btn-block color-medium">
-							Doença X
-							<button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-								<span aria-hidden="true">&times;</span>
-							</button>
-						</span>
+						<spam class="the-logo">
+							HealthWeb
+						</spam>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+							<span aria-hidden="true">&times;</span>
+						</button>
 					</div>
 					<div class="modal-body text-box">
+						<span class="btn btn-hw-sm btn-block color-medium">
+							Doença X
+						</span>
+						<br>
 						<h5>
 							Principais sintomas:
 						</51>
