--- a/aplicacao/front/index.html
+++ b/aplicacao/front/index.html
@@ -122,13 +122,15 @@
 		<div class="modal fade" id="modalExemplo" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 			<div class="modal-dialog modal-dialog-centered" role="document">
 				<div class="modal-content color-light round-border-hw">
-					<!-- <div class="modal-header">
-						<h5 class="modal-title" id="exampleModalLabel">Espere um pouco</h5>
-					</div> -->
-					<div class="modal-body text-box">
+					<div class="modal-header">
+						<spam class="the-logo">
+							HealthWeb
+						</spam>
 						<button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
-						<span aria-hidden="true">&times;</span>
+							<span aria-hidden="true">&times;</span>
 						</button>
+					</div>
+					<div class="modal-body text-box">
 						Antes de prosseguir é necessário concordar com os termos de uso.
 					</div>
 					<div class="modal-footer">
